fix(1183): removed extra form wrapping that caused double errors to be sent to data, maintained visual styling

--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -6,6 +6,16 @@ $govuk-assets-path: "/public/";
 
 @import "../components/button-spinner";
 
+.govuk-form-group--error-visual {
+  border-left: $govuk-border-width-form-group-error solid $govuk-error-colour;
+  padding-left: govuk-spacing(3);
+
+  .govuk-form-group--error {
+    border-left: 0;
+    padding-left: 0;
+  }
+}
+
 // repainting the notification banner red for a warning state on the passport CRI [PYIC-1563]
 
 .govuk-notification-banner.passport-message {
